--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: steve.czmyt.com
+title: <a href="https://steve.czmyt.com">steve.czmyt.com</a>
 description: My personal website.
 theme: jekyll-theme-slate
