--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: <a href="https://steve.czmyt.com">steve.czmyt.com</a>
+# title: <a href="https://steve.czmyt.com">steve.czmyt.com</a>
 title: steve.czmyt.com
 description: My personal website.
 theme: jekyll-theme-hacker
